--- a/gmodskin-foundation/sass/_settings.scss
+++ b/gmodskin-foundation/sass/_settings.scss
@@ -52,7 +52,7 @@ $em-base: 16 !default;
 $default-float: left;
 
 // $body-bg: #fff;
-$body-bg: #0f7fff;
+$body-bg: #0f7fff !important;
 // $body-font-color: #222;
 $body-font-color: #646464;
 // $body-font-family: "Helvetica Neue", "Helvetica", Helvetica, Arial, sans-serif;
