--- a/gmodskin-foundation/sass/_sidebar.scss
+++ b/gmodskin-foundation/sass/_sidebar.scss
@@ -47,6 +47,12 @@
 					@include single-box-shadow( shade($primary-color, 10%), 0, -2px, 0, 0);
 				}
 
+				padding-top: emCalc(16) !important;
+
+				@media only screen and (min-width: 768px) {
+					padding-top: emCalc(2) !important;
+				}
+
 				a{
 					display:block;
 
@@ -59,6 +65,12 @@
 
 					&:hover{
 						padding-left: 24px;
+					}
+
+					height: emCalc(48) !important;
+
+					@media only screen and (min-width: 768px) {
+						height: auto !important;
 					}
 				}
 			}
